--- a/index.html
+++ b/index.html
@@ -18,13 +18,27 @@
       const allData = Array.from({ length: 40 }, () =>
         Math.floor(Math.random() * 40)
       );
+
       function App() {
         const [currentList, setCurrentList] = React.useState(allData);
+
+        const handleSort = () => {
+          const sortedList = [...currentList].sort((a, b) => a - b);
+          setCurrentList(sortedList);
+        };
+
+        const handleFilterOdd = () => {
+          const filteredList = currentList.filter(item => item % 2 !== 0);
+          setCurrentList(filteredList);
+        };
+
         return (
           <>
             <div style={{ display: "flex" }}>
-              <button style={{ width: "100px", height: "100px" }}>Sort</button>
-              <button style={{ width: "100px", height: "100px" }}>
+              <button style={{ width: "100px", height: "100px" }} onClick={handleSort}>
+                Sort
+              </button>
+              <button style={{ width: "100px", height: "100px" }} onClick={handleFilterOdd}>
                 Filter Odd Numbers
               </button>
             </div>
